# finger_print

./: .cproject  .gitignore  .project  partitions_2.csv  sdkconfig
SERVER/: SERIAL_NUMBER.html  SUCCESS.html  WIFI_CREDENTIALS.html  index.html  script.js  style.css
main/: CMakeLists.txt  LCD_DISPLAY.c  LCD_DISPLAY.h  attendance_system.c  attendance_system.h  buzzer.c  buzzer.h  main.c  r305_fingerprint.c  r305_fingerprint.h  r305_main.c  rc522_rfid.c  rc522_rfid.h
main/certs/: prvtkey.pem  servercert.pem
main/server_certs/: ca_ota.pem
